@@ -7,6 +7,9 @@ Changelog
 - Text extraction with standalone Tika server.
   [buchi]
 
+- Handle stale catalog entries when syncing.
+  [buchi]
+
 
 2.13.4 (2025-04-28)
 -------------------
